# devserver

./: Cargo.toml  LICENSE.md  README.md
.github/workflows/: create_gh_release.yml  lint.yml
devserver_lib/: Cargo.toml  README.md
devserver_lib/examples/: run.rs
devserver_lib/src/: identity.pfx  lib.rs  reload.html  reload.rs
src/: main.rs
test/: index.html
