[package]
name = "devserver"
version = "0.1.0"
authors = ["Ian Kettlewell <ian.kettlewell@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/kettle11/devserver"
readme = "README.md"
keywords = ["web", "server", "https", "http"]
categories = ["web-programming::websocket"]
description = "A zero configuration tool for hosting a local folder with https for development purposes."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
devserver_lib = { path = "devserver_lib", version = "0.1.0" }