[package]
name = "devserver"
version = "0.1.1"
authors = ["Ian Kettlewell <ian.kettlewell@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/kettle11/devserver"
readme = "README.md"
keywords = ["web", "server", "https", "http"]
categories = ["command-line-utilities", "development-tools", "web-programming::http-server"]
description = "A zero configuration local https server for hosting a static folder. ONLY for development!"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
devserver_lib = { path = "devserver_lib", version = "0.1.0" }