[package]
name = "devserver_lib"
version = "0.1.0"
authors = ["Ian Kettlewell <ian.kettlewell@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A zero configuration library for hosting a local folder via https. Refer to 'devserver' for the command line tool."
repository = "https://github.com/kettle11/devserver/tree/master/devserver_lib"
readme = "README.md"
keywords = ["web", "server", "https", "http"]
categories = ["web-programming::http-server"]

[lib]
name = "devserver_lib"

[dependencies]
native-tls = "0.2"
