[package]
name = "devserver_lib"
version = "0.3.0"
authors = ["Ian Kettlewell <ian.kettlewell@gmail.com>"]
edition = "2018"
license = "Zlib"
description = "A zero configuration library for hosting a local folder via https. Refer to 'devserver' for the command line tool."
repository = "https://github.com/kettle11/devserver/tree/master/devserver_lib"
readme = "README.md"
keywords = ["web", "server", "https", "http"]
categories = ["web-programming::http-server"]

[lib]
name = "devserver_lib"

[dependencies]
native-tls = "0.2"
notify = {version = "4.0.15", optional = true}
sha-1 = {version = "0.8.2", optional = true}
base64 = {version = "0.11.0", optional = true}

[features]
default = []
reload = ["notify", "sha-1", "base64"]
